--- a/spring-petclinic/src/main/resources/templates/vets/vetList.html
+++ b/spring-petclinic/src/main/resources/templates/vets/vetList.html
@@ -5,13 +5,13 @@
 
 <body>
 
-  <h2>Notificaciones</h2>
+  <h2>Profesores</h2>
 
   <table id="vets" class="table table-striped">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Specialties</th>
+        <th>Nombre</th>
+        <th>Asignatura</th>
       </tr>
     </thead>
     <tbody>
