--- a/spring-petclinic/src/main/resources/templates/fragments/layout.html
+++ b/spring-petclinic/src/main/resources/templates/fragments/layout.html
@@ -46,17 +46,17 @@
   
                   <li th:replace="::menuItem ('/','home','home page','home','Home')">
                       <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                      <span>Home</span>
+                      <span>Inicio</span>
                   </li>
   
                   <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
                       <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                      <span>Find owners</span>
+                      <span>Buscar Apoderados</span>
                   </li>
   
                   <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
                       <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-                      <span>Veterinarians</span>
+                      <span>Profesores</span>
                   </li>
   
                   <li th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','warning-sign','Error')">
