--- a/spring-petclinic/src/main/resources/templates/owners/ownersList.html
+++ b/spring-petclinic/src/main/resources/templates/owners/ownersList.html
@@ -4,16 +4,16 @@
 
   <body>
 
-    <h2>Owners</h2>
+    <h2>Apoderados</h2>
 
     <table id="vets" class="table table-striped">
         <thead>
         <tr>
-            <th style="width: 150px;">Name</th>
-            <th style="width: 200px;">Address</th>
-            <th>City</th>
-            <th style="width: 120px">Telephone</th>
-            <th>Pets</th>
+            <th style="width: 150px;">Nombre</th>
+            <th style="width: 200px;">Dirección</th>
+            <th>Ciudad</th>
+            <th style="width: 120px">Telefono</th>
+            <th>Alumnos</th>
         </tr>
         </thead>
         <tbody>
